Use WebSockets to push execution status messages.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,6 +10,8 @@
 <body>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="js/angular-ui-tree.min.js"></script>
+    <script src="js/sockjs-0.3.4.js"></script>
+    <script src="js/stomp.js"></script>
     <script src="js/combo-customizer.js"></script>
 
     <div ng-app="ComboCustomizer" ng-controller="comboController" style="padding:5px">
